--- a/blog/package.json
+++ b/blog/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
@@ -18,9 +19,9 @@
     "populate": "^5.0.1",
     "router": "^1.3.6"
   },
-  "devDependencies": {},
   "scripts": {
-    "start": "nodemon ./app.js"
+    "start": "nodemon ./app.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install"
   },
   "keywords": [],
   "author": "",
