--- a/blog/package.json
+++ b/blog/package.json
@@ -20,8 +20,8 @@
     "router": "^1.3.6"
   },
   "scripts": {
-    "start": "nodemon ./app.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install"
+    "start": "node ./app.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install && npm run build"
   },
   "keywords": [],
   "author": "",
